--- a/Assignments/Assignment3/Assignment3.Rmd
+++ b/Assignments/Assignment3/Assignment3.Rmd
@@ -8,10 +8,11 @@ output:
 ```{r, include = FALSE}
 # rm(list=ls())
 
-install.packages(c("kableExtra", "tidytext", "tm"))
+install.packages(c("jsonlite", "kableExtra", "tidytext", "tm"))
 # install.packages("httr")
 # install.packages("ggplot2")
 library(httr)
+library(jsonlite)
 library(dplyr)
 library(ggplot2)
 library(data.table)
@@ -22,15 +23,23 @@ library(tm)
 
 # Part 1
 
-```{r}
-query <- GET(url = "https://api.nasa.gov/neo/rest/v1/feed", query = list(start_date = "2024-03-01", end_date = "2024-03-05", api_key = "Jyr4bwi75CTrtmzGLjzvSrDkiEueIfhAhFnP8k1N"))
-query <- content(query)
+```{r, message = FALSE}
+query <- GET(url = "https://api.nasa.gov/neo/rest/v1/feed", query = list(start_date = "2024-03-01", end_date = "2024-03-08", api_key = "Jyr4bwi75CTrtmzGLjzvSrDkiEueIfhAhFnP8k1N"))
+query <- fromJSON(httr::content(query, "text"), flatten = TRUE)
 ```
 
-I retrieved 97 near Earth objects for the time period 2024-03-01 to 2024-03-05, with 23, 17, 18, 30 and 9 for each day respectively. Each object in the query has an associated URL, ID, name, and recorded attributes such as estimated diameter, relative velocity, and miss distance (from Earth).
+I retrieved 145 near Earth objects for the time period 2024-03-01 to 2024-03-08. Each object in the query has an associated URL, ID, name, and recorded attributes such as estimated diameter, relative velocity, and miss distance from Earth.
 
 ```{r}
-df <- query$near_earth_objects$`2024-03-05`
+bind_rows(query$near_earth_objects$`2024-03-01`$close_approach_data)
+query$near_earth_objects$`2024-03-01`
+
+query %>% unnest(near_earth_objects)
+
+%>% 
+  select(estimated_diameter.meters.estimated_diameter_min,
+         estimated_diameter.meters.estimated_diameter_max,
+         is_potentially_hazardous_asteroid)
 ```
 
 # Part 2
